# libloggeru

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: libloggeru-config.cmake  libloggeruConfig.cmake  loggeru-config.cmake
include/: Logerru.h  loggeru.h
include/loggeru/: ConsoleColors.h
src/: Loggeru.cpp  loggeru.cpp
